# rt2_assignment1

./: README.md
rt2_assignment/: CMakeLists.txt  package.xml
rt2_assignment/src/: set_position_client.cpp  set_position_server.cpp
rt2_exercise/: setup.cfg  setup.py
rt2_exercise/rt2_exercise/: set_position_server.py
rt2_exercise_cpp/: CMakeLists.txt  package.xml
rt2_exercise_cpp/rt2_exercise/: set_position_client.cpp  set_position_server.cpp
rt2_exercise_python/rt2_exercise/: set_position_client.py
rt2_interfaces/: CMakeLists.txt  package.xml
rt2_interfaces/action/: MoveX.action
